[package]
name = "capture"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rdev = { version = "0.5", features = ["unstable_grab"] }
image = "0.25"
nokhwa = { version = "0.10", features = ["input-native"] }
jiff = "0.2.22"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13.2"
nix = { version = "0.31.1", features = ["poll"] }
